<resources>
    <string name="app_name">Droppy Drop</string>
    <string name="play">Play</string>
    <string name="scores">Scores</string>
    <string name="options">Options</string>
    <string name="credits">Credits</string>
    <string name="app_name_logo">Droppy Drop Logo</string>
    <string name="score_icon">score_icon</string>
    <string name="score_tab">Tableau des scores</string>
    <string name="sensibility">Sensibility</string>
    <string name="vibration">Vibration</string>
    <string name="username">Username</string>
    <string name="default_username">Player</string>
    <string name="save">Save</string>
    <string name="score_file">scores.txt</string>
    <string name="level_image">Level Image</string>
    <string name="select_a_level">Select a level</string>

    <string-array name="difficulty_arrays">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Very hard</item>
        <item>Expert</item>
        <item>Legendary</item>
    </string-array>
    <string name="no_scores">No score have been registered</string>
</resources>
