<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="211dp"
        android:contentDescription="@string/appNameLogo"
        app:srcCompat="@drawable/logo_droppydrop" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="158dp"
        android:text="@string/play" />

    <Button
        android:id="@+id/scoreButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/optionsButton"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-48dp"
        android:layout_marginEnd="0dp"
        android:text="@string/scores" />

    <Button
        android:id="@+id/optionsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/creditsButton"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-51dp"
        android:layout_marginEnd="0dp"
        android:text="@string/options" />

    <Button
        android:id="@+id/creditsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="11dp"
        android:text="@string/credits" />
</RelativeLayout>