<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".OptionsActivity"
    android:background="@color/colorBrownGreyLight">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtSelectLevel"
            style="@style/AppTheme.TitleActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/options" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sensibility_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/mona_free"
            android:text="@string/sensibility"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <SeekBar
            android:id="@+id/sensibility_seekBar"
            style="@android:style/Widget.Material.SeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:max="30"
            android:progress="30" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/vibration_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/mona_free"
            android:text="@string/vibration"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <SeekBar
            android:id="@+id/vibration_seekBar"
            style="@android:style/Widget.Material.SeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:max="255"
            android:progress="127" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/username_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/mona_free"
            android:textSize="30sp"
            android:textColor="@android:color/black"
            android:text="@string/username" />

        <EditText
            android:id="@+id/username_editText"
            android:layout_weight="2"
            tools:text="@string/default_username" />
    </TableRow>

    <TableRow>
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/difficulty_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/mona_free"
            android:textSize="30sp"
            android:text="Difficulty" />

        <Spinner
            android:id="@+id/difficulty_spinner"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/mona_free"
            android:drawSelectorOnTop="true"
            android:entries="@array/difficulty_arrays"
            />

    </TableRow>

</TableLayout>