<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".game.Level.LevelActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mona_free"
        android:textSize="30sp"
        android:visibility="visible"
        tools:text="@string/select_a_level" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5sp"
        android:id="@+id/levelTableLayout">

        <TableRow
            android:visibility="gone"
            android:id="@+id/levelImageRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" >

            <ImageView
                android:id="@+id/levelImage"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/level_image"
                android:scaleType="fitCenter"
                app:srcCompat="@android:color/holo_green_dark" />
        </TableRow>

        <TableRow
            android:id="@+id/levelInfoRow"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center">
            <TextView
                android:id="@+id/levelInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAppearance="@android:style/TextAppearance.Material.Headline"
                android:fontFamily="@font/mona_free"
                android:textSize="30sp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                tools:text="" />

        </TableRow>
        <TableRow
            android:id="@+id/playLevelButtonRow"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center">

            <Button
                android:id="@+id/playLevelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mona_free"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/play"
                android:textSize="30sp" />
        </TableRow>

    </TableLayout>

</LinearLayout>